# AI_solo_coder_task_B_146

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  out2.txt  result.txt  test_final.txt  test_out4.txt  test_out5.txt  test_output.txt  test_output2.txt  test_output3.txt
backend/config/: alarm_thresholds.json  gear_params.json  gear_params_jianyi.json  gear_params_modern_eq.json  gear_params_xiangyiyi.json
backend/src/: alarm_ws.rs  clickhouse.rs  degradation_sim.rs  dtu_receiver.rs  handlers.rs  instrument_comparison.rs  main.rs  metrics.rs  models.rs  mqtt_ingest.rs  pointing_analyzer.rs  transmission_simulator.rs  virtual_op.rs
clickhouse/: init.sql
clickhouse/config.d/: config.xml
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/config/: star_catalog.json  visualization.json
frontend/js/: armillary_3d.js  comparison_panel.js  transmission_panel.js  virtual_operation.js
observability/: prometheus.yml
observability/grafana/datasources/: clickhouse.yml
simulator/: Dockerfile  hunyi_simulator.py
