[package]
name = "hunyi-backend"
version = "0.1.0"
edition = "2021"
description = "古代浑仪机械传动误差仿真与天体指向精度分析系统后端"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-web-actors = "4.2"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
tracing-log = "0.2"
prometheus = { version = "0.13", features = ["process", "push"] }
parking_lot = "0.12"
thiserror = "1.0"
once_cell = "1.19"
actix = "0.13"
futures = "0.3"
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
